Fixed text-overflow in the show season list

--- a/src/seplis/web/static/app/styles/Base.scss
+++ b/src/seplis/web/static/app/styles/Base.scss
@@ -61,3 +61,7 @@ a.btn {
 .hidden {
     display: none !important;
 }
+
+.flex-min-width {
+    min-width: 0;
+}
